--- a/index.html
+++ b/index.html
@@ -17,30 +17,30 @@
                 <button class="operator">/</button>
             </div>
             <div class="row">
-                <button class="num">7</button>
-                <button class="num">8</button>
-                <button class="num">9</button>
+                <button class="num" id="7">7</button>
+                <button class="num" id="8">8</button>
+                <button class="num" id="9">9</button>
                 <button class="operator">x</button>
             </div>
             <div class="row">
-                <button class="num">4</button>
-                <button class="num">5</button>
-                <button class="num">6</button>
+                <button class="num" id="4">4</button>
+                <button class="num" id="5">5</button>
+                <button class="num" id="6">6</button>
                 <button class="operator">-</button>
             </div>
             <div class="row">
-                <button class="num">1</button>
-                <button class="num">2</button>
-                <button class="num">3</button>
+                <button class="num" id="1">1</button>
+                <button class="num" id="2">2</button>
+                <button class="num" id="3">3</button>
                 <button class="operator">+</button>
             </div>
             <div class="row">
                 <button class="num" id="zero">0</button>
                 <button class="num">.</button>
-                <button class="operator">=</button>
+                <button class="operator" id="eq">=</button>
             </div>
         </div>
     </div>
-    <script src="main js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
