Fixed bugs with clear function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="calculator">
             <div class="display"></div>
             <div class="row">
-                <button class="clear">CE</button>
+                <button class="operator" id="clear">CE</button>
                 <button class="operator">+/-</button>
                 <button class="operator">%</button>
                 <button class="operator">/</button>
@@ -37,7 +37,7 @@
             <div class="row">
                 <button class="num" id="zero">0</button>
                 <button class="num">.</button>
-                <button class="operator" id="eq">=</button>
+                <button class="eq">=</button>
             </div>
         </div>
     </div>
