Fixed bugs with +/- function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="display"></div>
             <div class="row">
                 <button class="operator" id="clear">CE</button>
-                <button class="operator">+/-</button>
+                <button class="operator" id="setneg">+/-</button>
                 <button class="operator">%</button>
                 <button class="operator">/</button>
             </div>
